--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [workspace]
 members = ["titan-deriverse", "jupiter-amm-interface"]
-
+# jupiter-amm-interface - local copy with extended Swap enum
 resolver = "2"
